--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,9 @@
       "@/containers/*": ["src/containers/*"],
       "@/types": ["src/types"],
       "@/types/*": ["src/types/*"],
+      "@/hooks": ["src/hooks"],
+      "@/hooks/*": ["src/hooks/*"],
+      "@/services": ["src/services"],
       "@/theme/*": ["src/theme/*"],
       "@/styles/*": ["src/styles/*"]
     }
