--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@emotion/styled": "latest",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
+    "@tanstack/react-query": "^4.13.0",
     "clsx": "^1.2.1",
+    "intersection-observer": "^0.12.2",
+    "just-debounce-it": "^3.1.1",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest"
